did some error-checks, restructured tex-file

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -53,11 +53,10 @@ This is an abstract text.
 \listoftables
 
 \chapter{The beginning is here}
+\include{Intro}
 
-Start your chapter by writing something smart. Then go get coffee.\\
-The very first approach was to simply try the problem on a bit. That is to try and substitute some small part of the mesh in a Finite Difference Diffusion solver (Froward Euler scheme) with a stochastic diffusion solver. A random walk method was implemented on part of the mesh to take over the equation-solving. This was done in 1 and 2 spatial dimensions with the aim of finding potential difficulties so that we can further investigate them. \\
-Upon switching length-scales a fundamental question arises almost immediately; what is the contiuum limit? In our case this question takes a slightly different, and possibly more answearble form; what is the conversion rate beween the continuum model and the microscopic model, and by extension, what does a walker correspond to?
-
+\chapter{Analysis}
+\include{errors}
 \end{document}
 
 \end{document}
