--- a/latex/main.tex
+++ b/latex/main.tex
@@ -12,7 +12,6 @@
 \usepackage[top=2cm, bottom=2cm, left=2cm, right=2cm]{geometry}
 \usepackage{hyperref}
 \usepackage{epstopdf}
-
 \renewcommand{\d}{\partial}
 % \usepackage{fontspec}
 % \newfontfamily\listingsfont[Scale=0.85]{Droid Sans Mono}
@@ -24,6 +23,11 @@
 %     numberstyle=\color{listingsnumbercolor}\footnotesize\listingsfont,
 %     identifierstyle=\footnotesize\listingsfont,
 % }
+
+
+
+% compile with pdflatex --shell-escape main.tex
+
 
 %opening
 \author{Fredrik E Pettersen\\ f.e.pettersen@fys.uio.no}
@@ -64,7 +68,5 @@ This is an abstract text.
 
 \chapter{Analysis}
 \include{errors}
-\end{document}
-
 \end{document}
 
