something is wrong with the way the error is calculated, wrote something about relation between steplength and timestep

--- a/latex/RandomWalks.tex
+++ b/latex/RandomWalks.tex
@@ -197,7 +197,7 @@ Looking at the difference in timestep size between the two lengthscales we see f
 \end{equation}
 Equating this with \ref{random_walk_variance} gives us a first order approximation to the steplength, $l$
 \begin{align}
- \langle\Delta x^2\rangle = 4pqNl^2 &= 2DN\Delta\tilde{t} \nonumber \\ 
+ \langle\Delta x^2\rangle &= 4pqNl^2 = 2DN\Delta\tilde{t} \nonumber \\ 
  l &= \sqrt{2D\Delta\tilde{t}}. \label{steplength}
 \end{align}
 Of course this is assuming that we use a random walk algorithm of fixed steplength.
