--- a/latex/main.tex
+++ b/latex/main.tex
@@ -63,10 +63,13 @@ This is an abstract text.
 \chapter{Introduction}
 \include{Intro}
 
-\chapter{Random walks}
+\chapter{Basic Theory}
 \include{RandomWalks}
+
 
 \chapter{Analysis}
 \include{errors}
+
+\chapter{Results}
 \end{document}
 
