--- a/latex/RandomWalks.tex
+++ b/latex/RandomWalks.tex
@@ -1,16 +1,19 @@
+
 In this chapter we will take a closer look at random walks, both in general and the transition from the statistical view to partial differential equations. 
 We will take a look at different algorithms to produce random walks, and discuss their pros and cons in light of this project. 
 Then we will take a quick look at partial diffential equations and numerical solution of them.
 
-\section{Introduction to random walks}
+\section{Introduction to random walks}\label{introduction_to_random_walks}
 The most basic random walk is a walker on the x-axis which will take a step of a fixed length to the right with a probability $p$, or to the left with a probability $q=1-p$. 
 Using (pseudo-) random numbers on a computer we can simulate the outturn of a random walk. 
 For each step (of which there are N) we draw a random number, r, between 0 and 1 from some distribution (say a uniform one) which will be the probability. 
-If $r\leq p$ the walker will take a step to the left, otherwise it will take a step to the left. 
+If $r\leq p$ the walker will take a step to the left, otherwise it will take a step to the right. 
 After the N steps the walker will have taken R steps to the right, and $L = N-R$ steps to the left. 
-The net displacement from the origin will be $S = R-L$. 
+The net displacement from the origin will be $S = R-L$. \\
+This simple approach is easily generalizable to two and three dimensions by having $2d$ possible outcomes from the random number, where d is the dimensionality. 
+In two d the walker will step up if $r\in(0.75,1]$ and left if $r\in[0,0.25)$, for example.
 
-\subsection{Further discussion and analysis of the introduction}
+\subsection{Further discussion and analysis of the introduction}\label{further_introduction}
 If we do sufficiently many walks, the net displacement will vary from $S=+N$ to $S=-N$ representing all steps to the right and all steps to the left respectively. 
 The probability of all steps beeing to the right is $P_N(N) = p^N$. 
 Should one of the steps be to the left, and the rest to the right we will get a net displacement of $S = N-2$ with the probability $P_N(R = N-1) = Np^{N-1}q$. 
@@ -33,24 +36,23 @@ From this we can also find the average value of the net displacement using $S = 
 \begin{align*}
  \langle S\rangle = \langle2R\rangle -N = 2Np-N\underbrace{(p+q)}_{=1} = N(2p-p-q) = N(p-q)
 \end{align*}
-We notice that the average net displacement is greatly dependent on the probability of the walk and that any symmetric walk will have an expected net displacement of zero. 
-In many cases we will be more interrested in the mean square displacement than the displacement itself. 
+We notice that the average net displacement is greatly dependent on the relationship between $p$ and $q$, and that any symmetric walk will have an expected net displacement of zero. 
+In many cases we will be more interrested in the mean square displacement than the displacement itself, because many important large scale parameters can be related to the root-mean-sqare displacement. 
 This can also be calculated rather straightforwardly. 
 \begin{align*}
   \langle R^2\rangle =  \sum\limits_{R=0}^N R^2P_N(R) &=  \sum\limits_{R=0}^N {N\choose R}R^2p^Rq^{N-R} = \\
  \left(p\frac{d}{dp}\right)^2 \sum\limits_{R=0}^N {N\choose R}p^Rq^{N-R} &= \left(p\frac{d}{dp}\right)^2(p+q)^N \\
  = Np(p+q)^{N-1} +p^2N(N-1)(p+q)^{N-2} &= (Np)^2 +Np(1-p) = (Np)^2 +Npq
 \end{align*}
-Like before, the average nett displacement is given as $S^2 = (2R-N)^2$ and we obtain
+Like before, the average net displacement is given as $S^2 = (2R-N)^2$ and we obtain
 \begin{align*}
  \langle S^2\rangle = 4\langle R^2\langle -4N\langle R\rangle + N^2 &= 4((Np)^2 +Npq) -4N^2p + N^2\\
- = N^2(4p^2 -4p +1) +4Npq &= N^2(2p-1)^2 +4Npq = N^2(p-q)^2 +4Npq
+ = N^2(4p^2 -4p +1) +4Npq &= N^2(2p-1)^2 +4Npq = N^2(p-q)^2 +4Npq.
 \end{align*}
 which for the 1D symmetric walk gives $\langle S^2\rangle =N$ and the variance, denoted $\langle\Delta S^2\rangle = \langle\langle S^2\rangle-\langle S\rangle^2\rangle$, is found by instertion as
 \begin{align}
- \langle\Delta S^2\rangle &= \langle N^2(p-q)^2 +4Npq - ( N(p-q))^2\rangle= 4Npql^2 \label{random_walk_variance}
+ \langle\Delta S^2\rangle &= \langle N^2(p-q)^2 +4Npq - ( N(p-q))^2\rangle= 4Npq 
 \end{align}
-where $l$ is the step length ($\Delta x_{i+1} = \Delta x_i \pm l$).\\
 When the number of steps gets very large we can approximate the Bernoulli distribution \ref{bernoulli_distr} by the Gaussian distribution. 
 This is most easily done in the symmertric case where $p=q=\frac{1}{2}$, but it is sufficient for the steplengths to have a finite variance (\emph{find something to refer to}). 
 The Bernoulli distribution then simplifies to
@@ -82,8 +84,19 @@ making the distribution
 \begin{equation}
  P(x,t) = \sqrt{\frac{1}{4\pi Dt}}\exp\left(-\frac{x^2}{4Dt}\right)
 \end{equation}
+Introducing $x$ also gives us the expected value and variance of x on a form which will be usefull later. 
+We have $x=Sa$ which means 
+$$\langle x\rangle=a\langle S\rangle$$ 
+and 
+$$\langle x^2\rangle=a^2\langle S^2\rangle$$
+Finally by insertion we find the variance $\langle \Delta x^2\rangle$
+\begin{equation}\label{random_walk_variance}
+ \langle \Delta x^2\rangle = \langle\langle x^2\rangle -\langle x\rangle^2\rangle = \langle a^2\langle S^2\rangle -a^2\langle S\rangle^2\rangle = 4Npqa^2
+\end{equation}
 
-\subsection{More general Random Walks}
+
+\subsection{More general Random Walks}\label{more_general_random_walks}
+
 In the more general case, the position of a random walker,$\vec{r}$ at a time $t_i$ is given by the sum
 \begin{equation}\label{brownian_motion}
  \vec{r}(t_i)=\sum\limits_{j=0}^i \Delta \vec{x}(t_j)
@@ -103,37 +116,38 @@ We see that $\langle \Delta x^2\rangle = 2Dt$.
 \emph{The introduction of the Einstein relation might put some restrictions on our model.}
 Normalizing the expression gives us 
 \begin{equation}\label{rw_gaussian_distribution}
- P(x,t) = \sqrt{\frac{1}{4Dt}}e^{-\frac{x^2}{4Dt}}
+ P(x,t) = \sqrt{\frac{1}{4Dt}}\exp\left(-\frac{x^2}{4Dt}\right)
 \end{equation}
 
 If we have a large number, N, of walkers, their concentration will be $C(x,t) = NP(x,t)$. 
 The concentration is conserved, so any amount that flows out of an area must reflect as a decrease in concentration. 
 We can express this by the flow of concentration
 \begin{equation}
- J_x = \frac{d}{dt}\int\limits_x^{\infty}C(x,t)dx = -D\frac{\d C(x,t)}{\d x}
+ \frac{\d C}{\d t} -\nabla\cdot\vec{J} = S
 \end{equation}
-or $\vec{J} = -D\nabla C$. Using some vector calculus we obtain
-\begin{equation}
- \frac{d}{dt}\int_V C(x,t)dV = -\oint\nabla C\cdot d\vec{S} = -\int_V D\nabla^2C dV
+where $\vec{J}$ is the flow vector and S is a source term which in our case will be zero.
+From Fick's first law we know that $\vec{J} = -D\nabla C$. Inserting this gives us
+\begin{equation}\label{simple_diffusion_equation}
+ \frac{\d C}{\d t} = \nabla\cdot \left(D\cdot\nabla C\right)
 \end{equation}
 which is the diffusion equation.
-\begin{equation}
- \frac{\d C}{\d t} = D\nabla^2 C
-\end{equation}
-By insertion we can check that this version (\ref{rw_gaussian_distribution}) of the gaussian distribution fulfills the diffusion eqution.
+By insertion we can check that this version (\ref{rw_gaussian_distribution}) of the gaussian distribution fulfills the diffusion eqution. 
+Starting with only the time derivative gives us
 \begin{align*}
  \frac{\d P}{\d t} = -\frac{4\pi D\exp\left(-\frac{x^2}{4Dt}\right)}{2\sqrt{(4\pi Dt)^3}}&+\frac{x^2\exp\left(-\frac{x^2}{4Dt}\right)}{4Dt^2\sqrt{4\pi Dt}} \\
  = \exp\left(-\frac{x^2}{4Dt}\right)\left(\frac{8Dx^2}{2\sqrt{\pi}(4Dt)^{5/2}} -\frac{(4D)^2t}{2\sqrt{\pi}(4Dt)^{5/2}}\right)&= \frac{4D\exp\left(-\frac{x^2}{4Dt}\right)(x^2-2Dt)}{\sqrt{\pi}(4Dt)^{5/2}}
 \end{align*}
- 
+ We then finish by doing the spatial derivative
 \begin{align*}
  D\frac{\d^2 P}{\d x^2} &= \frac{D}{\sqrt{4\pi Dt}}\frac{\d}{\d x}\left[-\exp\left(\frac{-x^2}{4Dt}\right)\left(\frac{-2x}{4Dt}\right)\right]\\
  = \frac{2D}{4Dt\sqrt{4\pi Dt}}&\exp\left(\frac{-x^2}{4Dt}\right)\left[1-x\left(\frac{2x}{4Dt}\right)\right] = \frac{4D\exp\left(-\frac{x^2}{4Dt}\right)(x^2-2Dt)}{\sqrt{\pi}(4Dt)^{5/2}}
 \end{align*}
+and see that they are equal, meaning that the diffusion equation is satisfied.
 
-\subsection{Choosing random walk algorithm}
-As this article points out \cite{} the simplest random walk model, which places walker on discrete mesh points and uses a fixed step length, has been used with great succsess to model diffusion processes. 
-However, this model will struggle with reproducing anisotropic diffusion, that is $D = D(x)$. \emph{Author} also suggests a method for improving the results by adjusting the step length according to to position, thus effectively adjusting the diffusion constant of the walk as well. 
+\subsection{Choosing random walk algorithm}\label{choosing_random_walk_algorithm}
+
+As this article points out \cite{farnell2005monte} the simplest random walk model, which places walker on discrete mesh points and uses a fixed step length, has been used with great succsess to model diffusion processes. 
+However, this model will struggle with reproducing anisotropic diffusion, that is $D = D(x)$. Farnell and Gibson also suggest a method for improving the results by adjusting the step length according to to position, thus effectively adjusting the diffusion constant of the walk as well. 
 We see then that the simplest model is rather robust, and well tested. 
 However, the aim of this project is to combine two realistic models for diffusion on different length scales, and the simplest random walk model has one fundamental flaw in that view; it is not a realistic model for diffusing particles. 
 Brownian motion is a more realistic physical model for diffusing particles, and can (I think) quite easily be modified to model anisotropic diffusion as well. 
@@ -141,7 +155,7 @@ We can model brownian motion simply by using equation \ref{brownian_motion}, and
 That beeing said, by the central limit theorem both models will after some timesteps be described by a gaussian distribution meaning that on the PDE scale we will not know the difference. 
 Hence it will make no sense to not use the simplest random walk model.
 
-\subsection{Potential problems or pitfalls with combining solutions}
+\subsection{Potential problems or pitfalls with combining solutions}\label{problems_and_pitfalls}
 
 There are a few obvious difficulties we can expect to run into in our planned project. 
 Future ones will be added here as well.
@@ -151,7 +165,8 @@ Future ones will be added here as well.
   The PDE-solver will be operating with some timestep $\Delta t$ which will, depending on the discretization of the PDE, have some constraints and will definately have an impact on the error. 
   The walkers will, as we have just seen, solve the diffusion equation as well, but with some different $\Delta \tilde{t}$ which is smaller than the timestep on the PDE level. 
   Depending on the couplig chosen between the two models this difference will have some effect or a catastrophic effect on the error. 
-  Running some number of steps, N, on the random-walk level should eventually sum up to the timestep on the PDE level, $\sum\limits_{i=0}^N \Delta\tilde{t} = \Delta t$, but it might turn out to be difficult to makes sure that this is fulfilled.
+  Running some number of steps, N, on the random-walk level should eventually sum up to the timestep on the PDE level, $\sum\limits_{i=0}^N \Delta\tilde{t} = \Delta t$. 
+  It turns out, as we will see in section \ref{probability_distribution_and_timesteps} that we can make sure the coupling is as good as it gets by restricting the step length of the walkers.
  \item Boundary conditions\\
  To combine the two models we will need to put restricting boundary conditions on the random walks. This is not usually done (as far as I have seen), but not very difficult. 
  Finding a boundary condition that accurately models the actual system turns out to be quite straightforward, so long as the walk-domain is not on the actual boundary of the whole system. 
@@ -161,20 +176,26 @@ Future ones will be added here as well.
  Dirichlet boundaries can (probably) be implemented by adding or removing walkers on the boundaries (or in a buffer-zone around them) untill we have the desired concentration of walkers.
  \item Negative concentration of walkers \\
  Should not be to difficult...
+ \item Smooth solutions\\
+ A diffusion process is very effective when it comes to dampig fast fluctuations, and so any solution of the diffusion equation will be smooth. 
+ When we itroduce a stochastic process, we will potentially also introduce fast fluctutations from one timestep to the next. 
+ In this case we are faced with a dilemma; on the one hand there is the smoothness of the solution to consider, on the other hand we have introduced the stochastic term believing that it adds detail to our model. 
+ The approach we use to this is to do some curve-fitting using both of the solutions. 
+ This will give us some difference between the two models and some smoothness.
 
 \end{itemize}
 
-\subsection{Random walks and anisotropy}
+\subsection{Random walks and anisotropy}\label{random_walks_and_anisotropy}
 
 Any real problem where parts of the diffusion process cannot be modelled by the continuum approximation is bound to be anisotropic. 
 There is reason to belive that an anisotropic diffusion process on the PDE level will lead to an aisotropic random walk model as well, but how do we modell this. 
 Equation \ref{steplength} shows the step length as a function of the diffusion constant. 
 If we simply replace the diffusion constant by a function $D = D(\vec{x})$ we are at least started, but this will not quite be sufficient as 
 
-\subsection{Random walks and drift}
+\subsection{Random walks and drift}\label{random_walks_and_drift}
 
 Another point we have yet to say something about is diffusion that has a drift term, $\frac{\d u}{\d x}$. 
-Initially one thought that diffusion in the ECS of the brain was governed by a drift term \cite{}, but the modern preception is that this drift term is in the very least negligible \cite{}.
+Initially one thought that diffusion in the ECS of the brain was governed by a drift term , but the modern preception is that this drift term is in the very least negligible \cite{nicholson2001diffusion}.
 The drift term might be of importance in other applications, however, and som we should look into it.\\
 How do we model random walks with drift? \\
 A first instinct is to simply add some vector to the brownian motion model, thus forcing all walkers to have a tendency to walk a certain direction. 
@@ -203,9 +224,9 @@ Which in many cases will simplify to
 
 
 \section{Some words about partial differential equations}\label{some_words_on_PDEs}
-\subsection{Discretizing}
+\subsection{Discretizing}\label{discretizing}
 
-To maintain a bit of generality we will look at the (potentially) anisotropic diffusion equation
+To maintain a bit of generality we will look at the (potentially) anisotropic diffusion equation in 2d. The extension to 3d is trivial, as is the 1d version.
 \begin{equation}
  \frac{\d u}{\d t} = \nabla D\nabla u +f
 \end{equation}
@@ -227,12 +248,14 @@ and insert for $\phi$
 \end{align*}
 Since we can only evaluate the diffusion constant at the mesh points (or strictly speaking since it is a lot simpler to do so) we must approximate $D_{i\pm1/2}\approx0.5(D_{i\pm1}+D_i)$. 
 Inerting this gives us 
-\begin{equation}
- \nabla D\nabla u\approx\frac{1}{2(\Delta x+\Delta y+\Delta z)}\left((D_{i+1,j,k}+D_{i,j,k})(u_{i+1,j,k}-u_{i,j,k})-(D_{i,j,k}+D_{i-1,j,k})(u_{i,j,k}-u_{i-1,j,k})\right)
-\end{equation}
-provided that $\Delta x=\Delta y=\Delta z$!
+\begin{align*}
+ \nabla D\nabla u\approx\frac{1}{2\Delta x^2}\left((D_{i+1,j}+D_{i,j})(u_{i+1,j}-u_{i,j})-(D_{i,j}+D_{i-1,j})(u_{i,j}-u_{i-1,j})\right) \\
+ +\frac{1}{\Delta y^2}\left((D_{i,j+1}+D_{i,j})(u_{i,j+1}-u_{i,j})-(D_{i,j}+D_{i,j-1})(u_{i,j}-u_{i,j-1})\right)
+\end{align*}
 
-\subsection{Truncation error}
+
+\subsection{Truncation error}\label{truncation_error}
+
 As we know the numerical derivative is not the analytical derivative, but an approximation. 
 This approximation has a well defined residual, or truncation error which we can find by Taylor expansion.
 \begin{equation*}
@@ -252,9 +275,11 @@ This will be such a costly operation that it will not necesarily be worth it.
 
 
 
-\section{Combining the two solvers}
+\section{Combining the two solvers}\label{combining_the_solvers}
 This section will deal with the actual combination of the two models.\\
-\subsection{The basic algorithm}
+
+\subsection{The basic algorithm}\label{basic_algorithm}
+
 The basic structure of the program is to have one solver-object which contains one PDE-solver for the normal diffusion equation, and a linked list of random walk-solvers and their relevant areas. 
 Before we start we must add an initial condition along with some parameters such as the diffusion constant (/tensor) and $\Delta t$, and we have the opportunity to mark areas on the mesh where we want random walk solvers. 
 The method for adding walk-areas will map them to an index and set the initial condition for the walk. 
@@ -272,7 +297,7 @@ A schematic of the algoritm is provided in figure \ref{schematic}.
 \end{figure}
 
 
-\subsection{Probability distribution and timesteps}
+\subsection{Probability distribution and timesteps}\label{probability_distribution_and_timesteps}
 As we saw in section \ref{more_general_random_walks} the probability of finding a walker at a position $x_i$ after some $N$ timesteps (on the walk-scale) is (in the limit of large $N$) given as the gaussian distribution. 
 In our application, however, we are not interrested in finding the walker at an exact position, but in an interval around the meshpoints sent to the walk-solver. 
 This interval is (for obvious reasons) $x_i\pm\frac{\Delta x}{2}$ where $\Delta x$ is the mesh resolution on the PDE level. 
