--- a/latex/main.tex
+++ b/latex/main.tex
@@ -12,7 +12,16 @@
 \usepackage[top=2cm, bottom=2cm, left=2cm, right=2cm]{geometry}
 \usepackage{hyperref}
 \usepackage{epstopdf}
+
+
+\usepackage[]{biblatex}
+% \bibliography{bibtex_ref_test.bib}
+\bibliography{references.bib}
+
 \renewcommand{\d}{\partial}
+
+\setlength{\headheight}{15pt}
+
 % \usepackage{fontspec}
 % \newfontfamily\listingsfont[Scale=0.85]{Droid Sans Mono}
 % \lstset {
@@ -35,7 +44,6 @@
 \date{June 2013}
 \begin{document}
 
-%\bibliography{references}
 
 \maketitle
 
@@ -43,11 +51,11 @@
 This is an abstract text.
 \end{abstract}
 
-\begin{dedication}
-  To someone
-  \\\vspace{12pt}
-  This is a dedication to my cat.
-\end{dedication}
+% \begin{dedication}
+%   To someone
+%   \\\vspace{12pt}
+%   This is a dedication to my cat.
+% \end{dedication}
 
 \begin{acknowledgements}
   I acknowledge my acknowledgements.
@@ -71,5 +79,6 @@ This is an abstract text.
 \include{errors}
 
 \chapter{Results}
+\printbibliography
 \end{document}
 
