--- a/latex/errors.tex
+++ b/latex/errors.tex
@@ -1,5 +1,3 @@
-
-
 \section{Some discussion}
 In this numerical setup we will potentially introduce several new error sources in addition to the nomal errors introduced by numerical solution of any equation (see section \ref{some_words_on_PDEs}). 
 When a part of the solution acquired is replaced by the solution from another model, which in this case is stochastic, we will change the initial condition to the next iteration in time. 
@@ -22,7 +20,7 @@ The manifactured, exact solution is $u(x,t) = \exp\left(-\pi^2t\right)\cos(\pi x
 
 \section{Manifactured Solutions}
 A normal way of checking that our scheme of choise is implemented correctly is by making an exact solution to the equation and checking that the error is of the expected order. 
-As a first, simple implenetation we have worked with the explicit Forward Euler discretization of the simplest form of the diffusion equation \hyperref[simple_diffusion_equation]{\ref*{simple_diffusion_equation}}. 
+As a first, simple implenetation we have worked with the explicit Forward Euler discretization of the simplest form of the diffusion equation \ref*{simple_diffusion_equation}. 
 This discretization is expected to have an error-term of the order of $\Delta t$, which again is limited by a stability criterion. 
 We can now decide that the solution to equation \ref{simple_diffusion_equation} should be
 \begin{equation}\label{manifactured_solution_1D}
