--- a/latex/main.tex
+++ b/latex/main.tex
@@ -12,7 +12,11 @@
 \usepackage[top=2cm, bottom=2cm, left=2cm, right=2cm]{geometry}
 \usepackage{hyperref}
 \usepackage{epstopdf}
+
 \renewcommand{\d}{\partial}
+
+\setlength{\headheight}{15pt}
+
 % \usepackage{fontspec}
 % \newfontfamily\listingsfont[Scale=0.85]{Droid Sans Mono}
 % \lstset {
