--- a/latex/main.tex
+++ b/latex/main.tex
@@ -13,14 +13,11 @@
 \usepackage{hyperref}
 \usepackage{epstopdf}
 
-<<<<<<< HEAD
-=======
 
 \usepackage[]{biblatex}
 % \bibliography{bibtex_ref_test.bib}
 \bibliography{references.bib}
 
->>>>>>> 36d01e701a5b78f6de6b3609e43f8149a9a80eb3
 \renewcommand{\d}{\partial}
 
 \setlength{\headheight}{15pt}
@@ -44,7 +41,7 @@
 %opening
 \author{Fredrik E Pettersen\\ f.e.pettersen@fys.uio.no}
 \title{\uppercase{Multiscale modeling of diffusion processes in the brain}}
-\date{June 2013}
+\date{June 2014}
 \begin{document}
 
 
@@ -82,6 +79,8 @@ This is an abstract text.
 \include{errors}
 
 \chapter{Results}
+
+%-------Bibliography-------%
 \printbibliography
 \end{document}
 
